<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="3"
    android:background="#E2E5E8"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_media"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/google"
                        android:padding="25dp"
                        android:contentDescription="@string/img"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google1"
                        android:textSize="23sp"

                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/facebook"
                        android:padding="25dp"
                        android:contentDescription="@string/img"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textSize="23sp"

                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/pinterest"
                        android:contentDescription="@string/img"
                        android:padding="25dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pinterest"
                        android:textSize="23sp"

                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/instagram"
                        android:padding="25dp"
                        android:contentDescription="@string/img"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/linkedin"
                        android:padding="25dp"
                        android:contentDescription="@string/img"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkedin"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/tele"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/telegram"
                        android:contentDescription="@string/img"
                        android:padding="25dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telegram"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/spotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:contentDescription="@string/img"
                        android:padding="25dp"
                        android:src="@drawable/spotify"
                        tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spotify"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/youT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/youtube"
                        android:padding="25dp"
                        android:contentDescription="@string/img"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/whats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:contentDescription="@string/img"
                        android:padding="25dp"
                        android:src="@drawable/whatsapp"
                        tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whatsapp"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/twitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/twitch"
                        android:padding="25dp"
                        android:contentDescription="@string/img"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twitch"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:contentDescription="@string/img"
                        android:padding="25dp"
                        android:src="@drawable/twitter"
                        tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/discord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:src="@drawable/discord"
                        android:contentDescription="@string/img"
                        android:padding="25dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discord"
                        android:textSize="23sp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>






</ScrollView>